# fft-ifft-2d

./: CMakeLists.txt  README.md
include/: fft.hpp  ifft.hpp  widget.hpp
src/: fft.cpp  ifft.cpp  widget.cpp
ui/: widget.ui
